コード整理

--- a/e2e-tests/messaging/index.html
+++ b/e2e-tests/messaging/index.html
@@ -8,8 +8,8 @@
 <body>
   <div class="container">
     <h1>DataChannel messaging test</h1>
+    <div id="sdk-version"></div>
     <p>複数のブラウザで開いて sendMessage することで動作確認できます</p>
-    <h2>sora-js-sdk version: <span id="sora-js-sdk-version"></span></h2>
     <label for="channel-name">チャンネル名:</label>
     <input type="text" id="channel-name" name="channel-name" value="messaging"><br>
     <div id="connection-id"></div>
