--- a/e2e-tests/sendonly/index.html
+++ b/e2e-tests/sendonly/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1>Sendonly test</h1>
-    <h3 id="sdk-version"></h3>
+    <div id="sdk-version"></div>
     <label for="channel-name">チャンネル名:</label>
     <input type="text" id="channel-name" name="channel-name" value="sendonly-recvonly"><br>
     <button id="connect">connect</button>
