--- a/e2e-tests/whip_simulcast/index.html
+++ b/e2e-tests/whip_simulcast/index.html
@@ -8,9 +8,8 @@
 </head>
 
 <body>
-  <div class="container">
-    <h2>Sora WHIP Client</h2>
-  </div>
+  <h1>Sora WHIP Client</h1>
+  <div id="sdk-version"></div>
 
   <label for="channel-name">チャンネル名:</label>
   <input type="text" id="channel-name" name="channel-name" value="whip-simulcast"><br>
@@ -32,7 +31,7 @@
   <div id="stats-report" style="white-space: pre-wrap; font-family: monospace;"></div>
   <div id="stats-report-json"></div>
 
-  <script type="module" src="./main.mts"></script>
+  <script type="module" src="./main.ts"></script>
 </body>
 
 </html>
