--- a/e2e-tests/h265/index.html
+++ b/e2e-tests/h265/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1>Sendrecv test</h1>
-    <h3 id="sdk-version"></h3>
+    <div id="sdk-version"></div>
     <label for="channel-name">チャンネル名:</label>
     <input type="text" id="channel-name" name="channel-name" value="sendrecv"><br>
     <label for="video-codec-type">ビデオコーデックを選択:</label>
@@ -34,7 +34,7 @@
     <div id="stats-report-json"></div>
   </div>
 
-  <script type="module" src="./main.mts"></script>
+  <script type="module" src="./main.ts"></script>
 </body>
 
 </html>
