--- a/e2e-tests/simulcast/index.html
+++ b/e2e-tests/simulcast/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="container">
     <h1>Simulcast test</h1>
+    <div id="sdk-version"></div>
     <label for="channel-name">チャンネル名:</label>
     <input type="text" id="channel-name" name="channel-name" value="simulcast"><br>
     <button id="connect">connect</button>
@@ -40,7 +41,7 @@
     <div id="stats-report-json"></div>
   </div>
 
-  <script type="module" src="./main.mts"></script>
+  <script type="module" src="./main.ts"></script>
 </body>
 
 </html>
