--- a/e2e-tests/spotlight_recvonly/index.html
+++ b/e2e-tests/spotlight_recvonly/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="container">
     <h1>Spotlight Recvonly test</h1>
+    <div id="sdk-version"></div>
     <label for="channel-name">チャンネル名:</label>
     <input type="text" id="channel-name" name="channel-name" value="spotlight"><br>
     <button id="connect">connect</button>
@@ -19,7 +20,7 @@
     </div>
   </div>
 
-  <script type="module" src="./main.mts"></script>
+  <script type="module" src="./main.ts"></script>
 </body>
 
 </html>
