--- a/e2e-tests/whep/index.html
+++ b/e2e-tests/whep/index.html
@@ -9,10 +9,8 @@
 </head>
 
 <body>
-  <div class="container">
-    <h2>Sora WHEP Client</h2>
-  </div>
-
+  <h1>Sora WHEP Client</h1>
+  <div id="sdk-version"></div>
   <label for="channel-name">チャンネル名:</label>
   <input type="text" id="channel-name" name="channel-name" value="whip_whep"><br>
   <label for="video-codec-type">ビデオコーデックを選択:</label>
@@ -35,7 +33,7 @@
   <div id="stats-report" style="white-space: pre-wrap; font-family: monospace;"></div>
   <div id="stats-report-json"></div>
 
-  <script type="module" src="./main.mts"></script>
+  <script type="module" src="./main.ts"></script>
 </body>
 
 </html>
