id を sora-js-sdk-version にする

--- a/e2e-tests/messaging/index.html
+++ b/e2e-tests/messaging/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="container">
     <h1>DataChannel messaging test</h1>
-    <div id="sdk-version"></div>
+    <div id="sora-js-sdk-version"></div>
     <p>複数のブラウザで開いて sendMessage することで動作確認できます</p>
     <label for="channel-name">チャンネル名:</label>
     <input type="text" id="channel-name" name="channel-name" value="messaging"><br>
