--- a/e2e-tests/spotlight_recvonly/index.html
+++ b/e2e-tests/spotlight_recvonly/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1>Spotlight Recvonly test</h1>
-    <div id="sdk-version"></div>
+    <div id="sora-js-sdk-version"></div>
     <label for="channel-name">チャンネル名:</label>
     <input type="text" id="channel-name" name="channel-name" value="spotlight"><br>
     <button id="connect">connect</button>
