--- a/e2e-tests/whip_simulcast/index.html
+++ b/e2e-tests/whip_simulcast/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <h1>Sora WHIP Client</h1>
-  <div id="sdk-version"></div>
+  <div id="sora-js-sdk-version"></div>
 
   <label for="channel-name">チャンネル名:</label>
   <input type="text" id="channel-name" name="channel-name" value="whip-simulcast"><br>
