--- a/e2e-tests/sendonly_audio/index.html
+++ b/e2e-tests/sendonly_audio/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <h1>Sendonly Audio Test</h1>
-    <div id="sdk-version"></div>
+    <div id="sora-js-sdk-version"></div>
     <label for="channel-name">チャンネル名:</label>
     <input type="text" id="channel-name" name="channel-name" value="sendonly_audio"><br>
     <label for="audio-codec-type">音声コーデック：</label>
