--- a/e2e-tests/spotlight_sendonly/index.html
+++ b/e2e-tests/spotlight_sendonly/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="container">
     <h1>Spotlight Sendonly test</h1>
+    <div id="sora-js-sdk-version"></div>
     <label for="channel-name">チャンネル名:</label>
     <input type="text" id="channel-name" name="channel-name" value="spotlight"><br>
     <button id="connect">connect</button>
@@ -18,8 +19,7 @@
       style="width: 320px; height: 240px; border: 1px solid black;"></video>
   </div>
 
-  <script type="module" src="./main.mts"></script>
-  </script>
+  <script type="module" src="./main.ts"></script>
 </body>
 
 </html>
