--- a/e2e-tests/data_channel_signaling_only/index.html
+++ b/e2e-tests/data_channel_signaling_only/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1>DataChannelSignalingOnly test</h1>
-    <h3 id="sdk-version"></h3>
+    <div id="sora-js-sdk-version"></div>
     <label for="channel-name">チャンネル名:</label>
     <input type="text" id="channel-name" name="channel-name" value="sendonly-recvonly"><br>
     <button id="connect">connect</button>
@@ -23,7 +23,7 @@
     <div id="stats-report-json"></div>
   </div>
 
-  <script type="module" src="./main.mts"></script>
+  <script type="module" src="./main.ts"></script>
 </body>
 
 </html>
