--- a/e2e-tests/sendonly_audio/index.html
+++ b/e2e-tests/sendonly_audio/index.html
@@ -10,6 +10,7 @@
 <body>
   <div class="container">
     <h1>Sendonly Audio Test</h1>
+    <div id="sora-js-sdk-version"></div>
     <label for="channel-name">チャンネル名:</label>
     <input type="text" id="channel-name" name="channel-name" value="sendonly_audio"><br>
     <label for="audio-codec-type">音声コーデック：</label>
@@ -39,7 +40,7 @@
     <div id="stats-report" style="white-space: pre-wrap; font-family: monospace;"></div>
     <div id="stats-report-json"></div>
   </div>
-  <script type="module" src="./main.mts"></script>
+  <script type="module" src="./main.ts"></script>
 </body>
 
 </html>
