--- a/e2e-tests/spotlight_sendrecv/index.html
+++ b/e2e-tests/spotlight_sendrecv/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="container">
     <h1>Spotlight Sendrecv test</h1>
+    <div id="sora-js-sdk-version"></div>
     <label for="channel-name">チャンネル名:</label>
     <input type="text" id="channel-name" name="channel-name" value="spotlight"><br>
 
@@ -28,7 +29,7 @@
 
   </div>
 
-  <script type="module" src="./main.mts"></script>
+  <script type="module" src="./main.ts"></script>
 </body>
 
 </html>
