webkit のテストを追加してみる

--- a/e2e-tests/index.html
+++ b/e2e-tests/index.html
@@ -10,6 +10,7 @@
   <div class="container">
     <ul>
       <li><a href="/sendrecv/">配信視聴テスト</a></li>
+      <li><a href="/sendrecv_webkit/">配信視聴テスト (WebKit)</a></li>
       <li><a href="/sendonly/">配信テスト</a></li>
       <li><a href="/recvonly/">視聴テスト</a></li>
       <li><a href="/spotlight_sendrecv/">スポットライト配信視聴テスト</a></li>
