--- a/e2e-tests/h265/index.html
+++ b/e2e-tests/h265/index.html
@@ -14,12 +14,7 @@
     <input type="text" id="channel-name" name="channel-name" value="sendrecv"><br>
     <label for="video-codec-type">ビデオコーデックを選択:</label>
     <select id="video-codec-type">
-      <option value="" selected>未指定</option>
-      <option value="VP8">VP8</option>
-      <option value="VP9">VP9</option>
-      <option value="AV1">AV1</option>
-      <option value="H264">H264</option>
-      <option value="H265">H265</option>
+      <option value="H265" selected>H265</option>
     </select><br>
     <button id="connect">connect</button>
     <button id="disconnect">disconnect</button>
