--- a/e2e-tests/simulcast_sendonly/index.html
+++ b/e2e-tests/simulcast_sendonly/index.html
@@ -3,15 +3,24 @@
 <head>
   <meta charset="utf-8">
   <link rel="icon" href="data:,">
-  <title>Simulcast test</title>
+  <title>Simulcast Sendonly</title>
 </head>
 
 <body>
   <div class="container">
-    <h1>Simulcast test</h1>
+    <h1>Simulcast Sendonly</h1>
     <div id="sora-js-sdk-version"></div>
     <label for="channel-name">チャンネル名:</label>
     <input type="text" id="channel-name" name="channel-name" value="simulcast"><br>
+    <label for="video-codec-type">ビデオコーデックを選択:</label>
+    <select id="video-codec-type">
+      <option value="undefined" selected>未指定</option>
+      <option value="VP8">VP8</option>
+      <option value="VP9">VP9</option>
+      <option value="AV1">AV1</option>
+    </select><br>
+    <label for="video-bit-rate">ビデオビットレート:</label>
+    <input type="number" id="video-bit-rate" name="video-bit-rate" value="1500"><br>
     <button id="connect">connect</button>
     <button id="disconnect">disconnect</button>
     <button id="get-stats">getStats</button><br />
