--- a/e2e-tests/index.html
+++ b/e2e-tests/index.html
@@ -27,6 +27,7 @@
       <li><a href="/whep/">WHEP テスト</a></li>
       <li><a href="/h265/">H265 テスト</a></li>
       <li><a href="/fake_sendonly/">フェイク配信テスト</a></li>
+      <li><a href="/sendonly_reconnect/">配信テスト (再接続)</a></li>
     </ul>
   </div>
 </body>
