WebKit での ScaleResolutionDownTo のテストを追加

--- a/e2e-tests/simulcast_sendonly_webkit/index.html
+++ b/e2e-tests/simulcast_sendonly_webkit/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <link rel="icon" href="data:,">
-  <title>Simulcast sendonly test</title>
+  <title>Simulcast sendonly WebKit test</title>
 </head>
 
 <body>
   <div class="container">
-    <h1>Simulcast sendonly test</h1>
+    <h1>Simulcast sendonly WebKit test</h1>
     <div id="sora-js-sdk-version"></div>
     <div>
       <label for="channel-name">channel_name:</label>
