--- a/e2e-tests/index.html
+++ b/e2e-tests/index.html
@@ -10,7 +10,6 @@
   <div class="container">
     <ul>
       <li><a href="/sendrecv/">配信視聴テスト</a></li>
-      <li><a href="/sendrecv_webkit/">配信視聴テスト (WebKit)</a></li>
       <li><a href="/sendonly/">配信テスト</a></li>
       <li><a href="/recvonly/">視聴テスト</a></li>
       <li><a href="/spotlight_sendrecv/">スポットライト配信視聴テスト</a></li>
@@ -28,6 +27,8 @@
       <li><a href="/h265/">H265 テスト</a></li>
       <li><a href="/fake_sendonly/">フェイク配信テスト</a></li>
       <li><a href="/sendonly_reconnect/">配信テスト (再接続)</a></li>
+      <li><a href="/sendrecv_webkit/">配信視聴テスト (WebKit)</a></li>
+      <li><a href="/simulcast_sendonly_webkit/">サイマルキャスト配信テスト (WebKit)</a></li>
     </ul>
   </div>
 </body>
