--- a/e2e-tests/index.html
+++ b/e2e-tests/index.html
@@ -23,6 +23,7 @@
       <li><a href="/data_channel_signaling_only/">データチャンネルテスト</a></li>
       <li><a href="/h265/">H265 テスト</a></li>
       <li><a href="/fake_sendonly/">フェイク配信テスト</a></li>
+      <li><a href="/fake_stereo_audio/">フェイクステレオ音声テスト</a></li>
       <li><a href="/sendonly_reconnect/">配信テスト (再接続)</a></li>
       <li><a href="/sendrecv_webkit/">配信視聴テスト (WebKit)</a></li>
       <li><a href="/simulcast_sendonly_webkit/">サイマルキャスト配信テスト (WebKit)</a></li>
