接続IDの表示を更新し、音声解析の数値変換を改善

--- a/e2e-tests/fake_stereo_audio/index.html
+++ b/e2e-tests/fake_stereo_audio/index.html
@@ -40,11 +40,11 @@
       </div>
 
       <div>
-        sendonly connection-id: <span id="sendonly-connection-id"></span>
+        connection-id 1: <span id="connection-id-1"></span>
       </div>
       
       <div>
-        recvonly connection-id: <span id="recvonly-connection-id"></span>
+        connection-id 2: <span id="connection-id-2"></span>
       </div>
 
       <div>
