sendonly / recovnly だけでなく sendrecv でもテストできるようにする

--- a/e2e-tests/fake_stereo_audio/index.html
+++ b/e2e-tests/fake_stereo_audio/index.html
@@ -26,6 +26,14 @@
       </div>
 
       <div>
+        <label for="role-mode">Role Mode</label>
+        <select id="role-mode">
+          <option value="sendonly-recvonly">sendonly / recvonly</option>
+          <option value="sendrecv-sendrecv">sendrecv × 2</option>
+        </select>
+      </div>
+
+      <div>
         <label>
           <input id="use-stereo" type="checkbox" checked />
           Use Stereo Audio (Fake Generator)
