RPCテストページを追加し、RPC機能の動作を確認するテストを実装する

--- a/e2e-tests/index.html
+++ b/e2e-tests/index.html
@@ -28,6 +28,7 @@
       <li><a href="/sendonly_reconnect/">配信テスト (再接続)</a></li>
       <li><a href="/sendrecv_webkit/">配信視聴テスト (WebKit)</a></li>
       <li><a href="/simulcast_sendonly_webkit/">サイマルキャスト配信テスト (WebKit)</a></li>
+      <li><a href="/rpc/">RPCテスト</a></li>
     </ul>
   </div>
 </body>
