RPCボタンのIDを変更し、イベントリスナーを再設定してRPC機能を強化する

--- a/e2e-tests/rpc/index.html
+++ b/e2e-tests/rpc/index.html
@@ -33,7 +33,7 @@
     <div>
       <label for="rpc-input">RPC Value:</label>
       <input type="text" id="rpc-input" value="test-value">
-      <button id="rpc-button">Send RPC</button>
+      <button id="rpc">Send RPC</button>
     </div>
     <div id="rpc-result" style="margin-top: 10px; padding: 10px; background-color: #f0f0f0;"></div>
     <div id="rpc-size-info" style="margin-top: 10px; padding: 10px; background-color: #f0f0f0; font-family: monospace;"></div>
