状態を確認する仕組みを追加

--- a/e2e-tests/simulcast_sendonly/index.html
+++ b/e2e-tests/simulcast_sendonly/index.html
@@ -41,6 +41,12 @@
     <div id="connection-id"></div>
     <video id="local-video" autoplay="" playsinline="" controls="" style="border: 1px solid blue;"></video>
 
+    <h2>Signaling Log</h2>
+    <div id="signaling-log" style="border: 1px solid gray; padding: 10px; margin: 10px 0; max-height: 300px; overflow-y: auto; font-family: monospace; font-size: 12px;"></div>
+
+    <h2>PeerConnection State</h2>
+    <pre id="pc-state" style="border: 1px solid gray; padding: 10px; margin: 10px 0; font-family: monospace; font-size: 12px;"></pre>
+
     <div id="stats-report" style="white-space: pre-wrap; font-family: monospace;"></div>
     <div id="stats-report-json"></div>
   </div>
