--- a/e2e-tests/index.html
+++ b/e2e-tests/index.html
@@ -26,6 +26,7 @@
       <li><a href="/fake_stereo_audio/">フェイクステレオ音声テスト</a></li>
       <li><a href="/fake_stereo_audio_sendrecv/">フェイクステレオ音声配信視聴テスト</a></li>
       <li><a href="/sendonly_reconnect/">配信テスト (再接続)</a></li>
+      <li><a href="/sendrecv_auto_reconnect/">配信視聴テスト (自動再接続)</a></li>
       <li><a href="/sendrecv_webkit/">配信視聴テスト (WebKit)</a></li>
       <li><a href="/simulcast_sendonly_webkit/">サイマルキャスト配信テスト (WebKit)</a></li>
       <li><a href="/rpc/">RPCテスト</a></li>
