フレーキーテストを修正する
- type_close: API リクエストの完了を DOM で検知できるように修正
- reconnect: API リクエストの完了を DOM で検知できるように修正
- authz_simulcast_encodings: connect() 完了後に初期状態を DOM に反映するように修正

--- a/e2e-tests/data_channel_signaling_only/index.html
+++ b/e2e-tests/data_channel_signaling_only/index.html
@@ -17,6 +17,7 @@
     <button id="disconnect-api">disconnect-api</button>
     <button id="get-stats">getStats</button><br />
     <div id="connection-id"></div>
+    <div id="api-disconnect-status"></div>
     <div id="signaling-close-type"></div>
     <video id="local-video" autoplay="" playsinline="" controls="" muted=""
       style="width: 320px; height: 240px; border: 1px solid black;"></video>
