--- a/e2e-tests/sendonly_reconnect/index.html
+++ b/e2e-tests/sendonly_reconnect/index.html
@@ -17,6 +17,7 @@
     <button id="disconnect">disconnect</button>
     <button id="get-stats">getStats</button><br />
     <div id="connection-id"></div>
+    <div id="api-disconnect-status"></div>
     <video id="local-video" autoplay="" playsinline="" controls="" muted=""
       style="width: 320px; height: 240px; border: 1px solid black;"></video>
 
