type_close テストで switched イベントを待機するように修正する
DataChannel signaling に切り替わる前に API 切断を行うと
close メッセージが届かない場合があるため、switched イベントを
DOM に反映させてテストで待機するようにした

--- a/e2e-tests/data_channel_signaling_only/index.html
+++ b/e2e-tests/data_channel_signaling_only/index.html
@@ -17,6 +17,7 @@
     <button id="disconnect-api">disconnect-api</button>
     <button id="get-stats">getStats</button><br />
     <div id="connection-id"></div>
+    <div id="switched-status"></div>
     <div id="api-disconnect-status"></div>
     <div id="signaling-close-type"></div>
     <video id="local-video" autoplay="" playsinline="" controls="" muted=""
