type: switched をトリガーにする

--- a/e2e-tests/rpc/index.html
+++ b/e2e-tests/rpc/index.html
@@ -53,6 +53,10 @@
     <h2>Recvonly (Simulcast)</h2>
     <div id="recvonly-connection-id"></div>
     <div>
+      <strong>Switched:</strong>
+      <span id="switched"></span>
+    </div>
+    <div>
       <strong>RPC Methods:</strong>
       <span id="rpc-methods"></span>
     </div>
