--- a/e2e-tests/data_channel_signaling_only/index.html
+++ b/e2e-tests/data_channel_signaling_only/index.html
@@ -18,6 +18,7 @@
     <button id="get-stats">getStats</button><br />
     <div id="connection-id"></div>
     <div id="switched-status"></div>
+    <div id="signaling-type-switched"></div>
     <div id="api-disconnect-status"></div>
     <div id="signaling-close-type"></div>
     <video id="local-video" autoplay="" playsinline="" controls="" muted=""
